--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
   <body>
-    <a href="./reflection.docx"> Reflection Week 1</a>  
+    <a href="./Reflection 1.docx"> Reflection Week 1</a>  
   <body>
 </html>
