--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
   <body>
-    <a href="./reflection3.docx"> Reflection Week 3 Re submit</a>  
+    <a href="./reflection2.docx"> Reflection Week 3</a>  
   <body>
 </html>
