--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
   <body>
-    <a href="./reflection5.docx"> Reflection Week 5</a>  
+    <a href="./personalproject.docx"> Personal Project</a>  
   <body>
 </html>
