--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
   <body>
-    <a href="./personalproject.docx"> Personal Project</a>  
+    <a href="./personalproject.docx"> Personal Project</a>
+     <a href="./personalproject.docx"> Personal Project</a>
+     <a href="./personalproject.docx"> Personal Project</a>
+     <a href="./personalproject.docx">reflection 3</a>
   <body>
 </html>
