--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 
   <body>
-    <a href="./personalproject.docx"> Personal Project</a>
-     <a href="./personalproject.docx"> Personal Project</a>
-     <a href="./personalproject.docx"> Personal Project</a>
-     <a href="./personalproject.docx">reflection 3</a>
+    <a href="./reflection6.docx"> Reflection 6</a>
+     <a href="./usermanualfinal.docx"> User Manual Final</a>
+     
   <body>
 </html>
