--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <a href="./reflection6.docx"> Reflection 6</a>
      <a href="./reflection7.docx"> Reflection 7</a>
-     <a href="./acornprojectprop.docx"> Acorn Project Proposal</a>
+     <a href="./acornprojectproposal.docx"> Acorn Project Proposal 2</a>
     
     
   <body>
