--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
   <body>
-    <a href="./reflection6.docx"> Reflection 6</a>
-     <a href="./reflection7.docx"> Reflection 7</a>
+    <a href="./reflection8.docx"> Reflection 6</a>
+     <a href="./acornfinalprop.docx"> Reflection 7</a>
      <a href="./acornprojectproposal.docx"> Acorn Project Proposal 2</a>
     
     
